Implementation of task userview

--- a/src/locales/translations/de.json
+++ b/src/locales/translations/de.json
@@ -13,6 +13,7 @@
   "userList": {
     "header": "Nutzerliste",
     "next": "Nächste",
-    "previous": "Vorherige"
+    "previous": "Vorherige",
+    "user": "Nutzer"
   }
 }
