Add logout functionality

--- a/src/locales/translations/de.json
+++ b/src/locales/translations/de.json
@@ -1,6 +1,7 @@
 {
   "signUp": "Anmeldung",
   "login": "Einloggen",
+  "logout": "Ausloggen",
   "username": "Benutzername",
   "email": "Email",
   "password": "Passwort",
