--- a/src/locales/translations/en.json
+++ b/src/locales/translations/en.json
@@ -1,6 +1,7 @@
 {
   "signUp": "Sign Up",
   "login": "Login",
+  "logout": "Logout",
   "username": "Username",
   "email": "Email",
   "password": "Password",
